# actix_db

./: Cargo.toml
actix-diesel-actor/: Cargo.toml  README.md
actix-diesel-actor/src/: lib.rs
actix-diesel-session/: .env  Cargo.toml
actix-diesel-session/migrations/2019-02-08-133121_user_session/: up.sql
actix-diesel-session/src/: data.rs  lib.rs  schema.rs
