[package]
name = "actix-diesel-actor"
version = "0.1.1"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An actor which accepts diesel queries packaged into Actix messages."
readme = "README.md"
repository = "https://github.com/actix_db/actix-diesel-actor"
keywords = ["database", "web", "actix", "diesel"]
categories = ["asynchronous", "web-programming::http-server", "database"]

[dependencies]
actix = "0.8"
dotenv = "0.14"
log = "0.4.6"

[dependencies.diesel]
version = "1.4"
features = ["postgres","r2d2"]
