[package]
name = "actix-diesel-session"
version = "0.0.1"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Provides an actix-web SessionBackend leveraging actix-diesel-actor"
readme = "README.md"
repository = "https://github.com/actix_db/actix-diesel-actor"
keywords = ["database", "web", "actix", "diesel"]
categories = ["asynchronous", "web-programming::http-server", "database"]

[dependencies]
actix = "0.7.9"
actix-web = "0.7.17"
log = "0.4.6"
futures = "0.1.25"
actix-diesel-actor = "0.1.0"
serde = "1.0.87"
serde_json = "1.0.38"
serde_derive = "1.0.87"

[dependencies.diesel]
version = "1.3.3"
features = ["postgres","r2d2","serde_json"]
